PAY-6394: Update to Java 17