@@ -1,8 +1,5 @@
- # renovate: datasource=github-releases depName=microsoft/ApplicationInsights-Java
-ARG APP_INSIGHTS_AGENT_VERSION=2.5.1
-
-# Application image
-FROM hmctspublic.azurecr.io/base/java:11-distroless
+ARG APP_INSIGHTS_AGENT_VERSION=3.4.18
+FROM hmctspublic.azurecr.io/base/java:17-distroless
 ENV APP bar-app.jar
 
 COPY build/libs/$APP /opt/app/
@@ -10,5 +7,8 @@ COPY lib/AI-Agent.xml /opt/app/
 
 EXPOSE 8080
 
-CMD ["bar-app.jar"]
+CMD [ \
+    "--add-opens", "java.base/java.lang=ALL-UNNAMED", \
+    "bar-app.jar" \
+    ]
 
